[tool.poetry]
name = "liftover_bam"
version = "0.1.0"
description = ""
authors = ["Douglas Wu <wckdouglas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pysam = "0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
