[tool.poetry]
name = "liftover_bam"
version = "0.1.0"
description = ""
authors = ["Douglas Wu <wckdouglas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pysam = "0.18.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
testing = ["pytest", "mypy"]

[[tool.mypy.overrides]]
module = [
    "pysam.*"
]
